--- a/template/styles/fragments/navbar.scss
+++ b/template/styles/fragments/navbar.scss
@@ -59,6 +59,7 @@
 
     &:hover, &:focus {
         background: $gray;
+        outline: none;
     }
 }
 
@@ -67,10 +68,11 @@
     margin-left: -100%;
     position: fixed;
     top: $navbar-height;
-    bottom: 0;
     background: $primary;
     transition: margin-left 0.5s;
+    height: calc(100% - #{$navbar-height});
     width: 100%;
+    overflow-y: auto;
 
     &.navbar-mobile.-visible {
         margin-left: 0;
